<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jimenard.scrummerstest.viewmodels.CarViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/category_car"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@{viewModel.selectedCategory}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/seats_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/seats_up"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_car">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background"
                android:inputType="number"
                android:padding="10dp"
                android:text="@={viewModel.seatsUp}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/price"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seats_up">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:text="@={viewModel.price}" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/is_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:checked="@={viewModel.isNew}"
            android:text="@string/is_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/model"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/is_new">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:text="@={viewModel.model}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/released_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/date_released"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/model">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background"
                android:inputType="date"
                android:padding="10dp"
                android:text="@={viewModel.dateReleased}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/extra_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/date_released"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/released_date">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_background"
                android:inputType="date"
                android:padding="10dp"
                android:text="@={viewModel.extraData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/new_car"
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:text="@string/add_new_car"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/extra_data"
            tools:ignore="PrivateResource" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>